--- a/_includes/comments-providers/giscus.html
+++ b/_includes/comments-providers/giscus.html
@@ -17,6 +17,7 @@
     script.setAttribute('data-mapping', '{{ site.comments.giscus.discussion_term | default: "pathname" }}');
     script.setAttribute('data-reactions-enabled', '{{ site.comments.giscus.reactions_enabled | default: 1 }}');
     script.setAttribute('data-theme', '{{ site.comments.giscus.theme | default: "light" }}');
+    script.setAttribute('data-lang', '{{ site.comments.giscus.lang | default: "en-US" }}');
     script.setAttribute('crossorigin', 'anonymous');
 
     commentContainer.appendChild(script);
