--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -29,7 +29,7 @@ layout: default
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
-          <span class="author__name p-name" itemprop="name">
+          <span class="author__name p-name" style="font-size: 60%" itemprop="name">
               <a class="u-url" rel="me" href="{{ author.home | default: '/' | absolute_url }}" itemprop="url">{{ author.name }}</a>
           </span>
           {% include page__meta.html %}
