--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -29,9 +29,6 @@ layout: default
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
-          <span class="author__name p-name" style="font-size: 60%" itemprop="name">
-              <a class="u-url" rel="me" href="{{ author.home | default: '/' | absolute_url }}" itemprop="url">{{ author.name }}</a>
-          </span>
           {% include page__meta.html %}
         </header>
       {% endunless %}
@@ -60,6 +57,9 @@ layout: default
       {% if page.share %}{% include social-share.html %}{% endif %}
 
       {% include post_pagination.html %}
+      作者：<span class="author__name p-name" itemprop="name">
+          <a class="u-url" rel="me" href="{{ author.home | default: '/' | absolute_url }}" itemprop="url">{{ author.name }}</a>
+      </span>
     </div>
 
     {% if jekyll.environment == 'production' and site.comments.provider and page.comments %}
