--- a/_includes/page__date_author.html
+++ b/_includes/page__date_author.html
@@ -4,10 +4,10 @@
 
 {% if page.last_modified_at %}
   <p class="page__date">
-      <strong>作者：</strong> <a class="u-url" rel="me" href="{{ author.home }}" itemprop="url">{{ author.name }}</a>，
+      <strong>作者：</strong> {{ author.name }}，
       <strong> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time class="dt-published" datetime="{{ page.last_modified_at | date: "%Y-%m-%d" }}">{{ page.last_modified_at | date: date_format }}</time></p>
 {% elsif page.date %}
   <p class="page__date">
-      <strong>作者：</strong> <a class="u-url" rel="me" href="{{ absolute_url }}" itemprop="url">{{ author.name }}</a>，
+      <strong>作者：</strong> {{ author.name }}，
       <strong> {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }}</strong> <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: date_format }}</time></p>
 {% endif %}
