--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,3 +23,7 @@
     <script src="{{ script | relative_url }}"></script>
   {% endfor %}
 {% endif %}
+
+{% if site.google_ad_client %}
+  {% include google_adsense.html %}
+{% endif %} 
